<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/item_share"
        android:icon="@drawable/outline_share_24"
        android:title="@string/title_share"
        android:contentDescription="@string/content_description_sort"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/item_find"
        android:title="@string/title_find"
        app:showAsAction="never" />

    <item
        android:id="@+id/item_info"
        android:title="@string/title_info"
        app:showAsAction="never" />

    <item
        android:id="@+id/item_delete"
        android:title="@string/title_delete"
        app:showAsAction="never" />

</menu>
