<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            style="?attr/collapsingToolbarLayoutMediumStyle"
            android:layout_width="match_parent"
            android:layout_height="?attr/collapsingToolbarLayoutMediumSize"
            android:minHeight="10dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
            app:title="@string/about_bar_name">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:elevation="0dp"
                app:layout_collapseMode="pin"
                app:navigationIcon="@drawable/outline_arrow_back_24" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/noteNestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="12dp"
                app:cardBackgroundColor="#00FFFFFF"
                app:cardCornerRadius="30dp"
                app:cardElevation="0dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/description_app_icon"
                    android:src="@mipmap/ic_launcher" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <TextView
                android:id="@+id/app_version_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/version_format"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <!--about the app-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/about_app" />
                <Button
                    android:id="@+id/btn_github"
                    style="@style/aboutButtonStyle"
                    android:text="@string/github_button_text"
                    app:cornerRadius="12dp"
                    app:icon="@drawable/github_24"
                    app:iconSize="22dp" />
                <Button
                    android:id="@+id/btn_email"
                    style="@style/aboutButtonStyle"
                    android:text="@string/email_button_text"
                    app:cornerRadius="12dp"
                    app:icon="@drawable/outline_email_24"
                    app:iconSize="22dp" />
            </LinearLayout>

            <!--donate the app-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/about_donate" />
                <Button
                    android:id="@+id/btn_alipay"
                    style="@style/aboutButtonStyle"
                    android:text="@string/alipay_button_text"
                    app:cornerRadius="12dp"
                    app:icon="@drawable/alipay_24"
                    app:iconSize="22dp" />
                <Button
                    android:id="@+id/btn_wechat"
                    style="@style/aboutButtonStyle"
                    android:text="@string/wechat_button_text"
                    app:cornerRadius="12dp"
                    app:icon="@drawable/wechat_pay_line_24"
                    app:iconSize="22dp" />
            </LinearLayout>

            <!--app contributors-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/about_contributors" />
                <Button
                    android:id="@+id/author_cworld"
                    style="@style/aboutButtonStyle"
                    android:text="@string/author_cworld_button_text"
                    app:cornerRadius="12dp"
                    app:icon="@drawable/outline_person_24"
                    app:iconSize="22dp" />
                <Button
                    android:id="@+id/author2"
                    style="@style/aboutButtonStyle"
                    android:text="@string/test"
                    app:cornerRadius="12dp"
                    app:icon="@drawable/outline_person_24"
                    app:iconSize="22dp" />
                <Button
                    android:id="@+id/author3"
                    style="@style/aboutButtonStyle"
                    android:text="@string/test"
                    app:cornerRadius="12dp"
                    app:icon="@drawable/outline_person_24"
                    app:iconSize="22dp" />
                <Button
                    android:id="@+id/author4"
                    style="@style/aboutButtonStyle"
                    android:text="@string/test"
                    app:cornerRadius="12dp"
                    app:icon="@drawable/outline_person_24"
                    app:iconSize="22dp" />
            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>